Day 2 Base HTML

--- a/index.html
+++ b/index.html
@@ -6,10 +6,118 @@
     <title>My Resume</title>
 </head>
 <body>
-    <h1>Hi text 1</h1>
-    <h2>Hi text 2</h2>
-    <h3>Hi text 3</h3>
-    <h4>Hi text 4</h4>
-    <h5>Hi text 5</h5>
+    <!--Main-->
+    <div>
+        <!--Main Content-->
+        <div>
+            <!--About User-->
+            <div>
+                <h2>Front-End Developer</h2>
+                <h1>Yuri Vipshovsky</h1>
+                <p>Programmer on severel langages without work experiense, but with great desire to work in IT</p>
+            </div>
+            <!--Progects-->
+            <div>
+                <h3>Projets</h3>
+                <ol>
+                    <li>
+                        <a href="https://github.com/Yurii-Vipshovsky/SS_Progect_Front/tree/master">https://github.com/Yurii-Vipshovsky/SS_Progect_Front/tree/master</a>
+                        <img src="img/vector.svg" alt=""/>
+                        [ React ]
+                    </li>
+                    <li>
+                        <a href="https://github.com/Yurii-Vipshovsky/Web_app">https://github.com/Yurii-Vipshovsky/Web_app</a>
+                        <img src="img/vector.svg" alt=""/>
+                        [ ASP.net ]
+                    </li>
+                    <li>
+                        <a href="https://github.com/XashDM/sport-hub">https://github.com/XashDM/sport-hub</a>
+                        <img src="img/vector.svg" alt=""/>
+                        [ HTML5, CSS3, JavaScript, ASP.net ]
+                    </li>
+                </ol>
+            </div>
+            <!--Work-->
+            <div>
+                <h3>Work Experience</h3>
+                <!--Company 1-->
+                <div>
+                    <h4>Accounter "Культпроект"</h4>
+                    <p>June 2018 - up to now | Ukraine</p>
+                    <ul>
+                        <li>Bills payment</li>
+                        <li>Creation of tax reports</li>
+                        <li>Salary accrual</li>
+                        <li>Goods accounting</li>
+                    </ul>
+                </div>
+                <!--Company 2-->
+                <div>
+                    <h4>Manager Roga & Kopyta New</h4>
+                    <p>March 2015 - October 2018   |   Country</p>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</li>
+                        <li>Quis ipsum suspendisse ultrices gravida.</li>
+                        <li>Risus commodo viverra maecenas. </li>
+                    </ul>
+                </div>
+                <!--Company 3-->
+                <div>
+                    <h4>Manager Roga & Kopyta LLC </h4>
+                    <p>June 2014 - February 2015   |   Country</p>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</li>
+                        <li>Quis ipsum suspendisse ultrices gravida.</li>
+                        <li>Risus commodo viverra maecenas. </li>
+                    </ul>
+                </div>
+            </div>
+            <!--Education-->
+            <div>
+                <h3>Education</h3>
+                <div>
+                    <h4>Ivan Franko National University of Lviv</h4>
+                    <h5>Computer Science</h5>
+                    <p>September 2019 - up to now   |   Ukraine</p>
+                </div>
+            </div>
+        </div>
+        <!--Side Bar-->
+        <aside>
+            <img src="img/photo_2022-01-28_19-39-54.jpg" alt="My Photo"/>
+            <!--Contacts-->
+            <div>
+                <h3>Contacts</h3>
+                <div>
+                    <p>C: <a href="tel:+380958962778">+380 95 896 2778</a></p>
+                    <p>E: <a href="mailto:jura12156@gmail.com">jura12156@gmail.com</a></p>
+                </div>
+            </div>
+            <!--Tech Skils-->
+            <div>
+                <h3>Tech Skils</h3>
+                <ul>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>GIT</li>
+                    <li>ASP.net</li>
+                    <li>Python</li>
+                </ul>
+            </div>
+            <!--Soft Skils-->
+            <div>
+                <h3>Soft Skils</h3>
+                <ul>
+                    <li>Scrum</li>
+                    <li>Agile</li>
+                    <li>Teamwork</li>
+                    <li>Communication</li>
+                    <li>Problem solving</li>
+                    <li>Time management</li>
+                </ul>
+            </div>
+        </aside>
+    </div>
+
 </body>
 </html>
