--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <!--Main-->
-    <div>
+    <main>
         <!--Main Content-->
         <div>
             <!--About User-->
@@ -117,7 +121,7 @@
                 </ul>
             </div>
         </aside>
-    </div>
+    </main>
 
 </body>
 </html>
