4day add leftbar styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Main-->
     <main>
         <!--Main Content-->
-        <div>
+        <div class="main-content">
             <!--About User-->
             <div>
                 <h2>Front-End Developer</h2>
@@ -88,36 +88,36 @@
         </div>
         <!--Side Bar-->
         <aside>
-            <img src="img/photo_2022-01-28_19-39-54.jpg" alt="My Photo"/>
+            <img src="img/photo_2022-01-28_19-39-54.jpg" alt="My Photo" class="myPhoto"/>
             <!--Contacts-->
-            <div>
+            <div class="userInfo contacts">
                 <h3>Contacts</h3>
                 <div>
-                    <p>C: <a href="tel:+380958962778">+380 95 896 2778</a></p>
-                    <p>E: <a href="mailto:jura12156@gmail.com">jura12156@gmail.com</a></p>
+                    <p><span class="contact-type">C:</span> <a class="contact-link" href="tel:+380958962778">+380 95 896 2778</a></p>
+                    <p><span class="contact-type">E:</span> <a class="contact-link" href="mailto:jura12156@gmail.com">jura12156@gmail.com</a></p>
                 </div>
             </div>
             <!--Tech Skils-->
-            <div>
+            <div class="userInfo">
                 <h3>Tech Skils</h3>
                 <ul>
-                    <li>HTML5</li>
-                    <li>CSS3</li>
-                    <li>GIT</li>
-                    <li>ASP.net</li>
-                    <li>Python</li>
+                    <li><span>HTML5</span></li>
+                    <li><span>CSS3</span></li>
+                    <li><span>GIT</span></li>
+                    <li><span>ASP.net</span></li>
+                    <li><span>Python</span></li>
                 </ul>
             </div>
             <!--Soft Skils-->
-            <div>
+            <div class="userInfo">
                 <h3>Soft Skils</h3>
                 <ul>
-                    <li>Scrum</li>
-                    <li>Agile</li>
-                    <li>Teamwork</li>
-                    <li>Communication</li>
-                    <li>Problem solving</li>
-                    <li>Time management</li>
+                    <li><span>Scrum</span></li>
+                    <li><span>Agile</span></li>
+                    <li><span>Teamwork</span></li>
+                    <li><span>Communication</span></li>
+                    <li><span>Problem solving</span></li>
+                    <li><span>Time management</span></li>
                 </ul>
             </div>
         </aside>
