day 5 end with styles

--- a/index.html
+++ b/index.html
@@ -15,39 +15,39 @@
         <!--Main Content-->
         <div class="main-content">
             <!--About User-->
-            <div>
+            <div class="about">
                 <h2>Front-End Developer</h2>
                 <h1>Yuri Vipshovsky</h1>
                 <p>Programmer on severel langages without work experiense, but with great desire to work in IT</p>
             </div>
             <!--Progects-->
-            <div>
-                <h3>Projets</h3>
+            <div class="progects">
+                <h3 class="title">Projets</h3>
                 <ol>
                     <li>
                         <a href="https://github.com/Yurii-Vipshovsky/SS_Progect_Front/tree/master">https://github.com/Yurii-Vipshovsky/SS_Progect_Front/tree/master</a>
-                        <img src="img/vector.svg" alt=""/>
-                        [ React ]
+                        <img id="img1" src="img/vector.svg" alt=""/>
+                        [<span class="tech-name"> React </span>]
                     </li>
                     <li>
                         <a href="https://github.com/Yurii-Vipshovsky/Web_app">https://github.com/Yurii-Vipshovsky/Web_app</a>
-                        <img src="img/vector.svg" alt=""/>
-                        [ ASP.net ]
+                        <img id="img2" src="img/vector.svg" alt=""/>
+                        [<span class="tech-name"> ASP.net </span>]
                     </li>
                     <li>
                         <a href="https://github.com/XashDM/sport-hub">https://github.com/XashDM/sport-hub</a>
-                        <img src="img/vector.svg" alt=""/>
-                        [ HTML5, CSS3, JavaScript, ASP.net ]
+                        <img id="img3" src="img/vector.svg" alt=""/>
+                        [<span class="tech-name"> HTML5, CSS3, JavaScript, ASP.net </span>]
                     </li>
                 </ol>
             </div>
             <!--Work-->
             <div>
-                <h3>Work Experience</h3>
+                <h3 class="title">Work Experience</h3>
                 <!--Company 1-->
-                <div>
-                    <h4>Accounter "Культпроект"</h4>
-                    <p>June 2018 - up to now | Ukraine</p>
+                <div class="work">
+                    <h4>Accounter <span>"Культпроект"</span></h4>
+                    <p>June 2018 - up to now <span>|</span> Ukraine</p>
                     <ul>
                         <li>Bills payment</li>
                         <li>Creation of tax reports</li>
@@ -56,9 +56,9 @@
                     </ul>
                 </div>
                 <!--Company 2-->
-                <div>
-                    <h4>Manager Roga & Kopyta New</h4>
-                    <p>March 2015 - October 2018   |   Country</p>
+                <div class="work">
+                    <h4>Manager <span>Roga & Kopyta New</span></h4>
+                    <p>March 2015 - October 2018   <span>|</span>   Country</p>
                     <ul>
                         <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</li>
                         <li>Quis ipsum suspendisse ultrices gravida.</li>
@@ -66,9 +66,9 @@
                     </ul>
                 </div>
                 <!--Company 3-->
-                <div>
-                    <h4>Manager Roga & Kopyta LLC </h4>
-                    <p>June 2014 - February 2015   |   Country</p>
+                <div class="work">
+                    <h4>Manager <span>Roga & Kopyta LLC</span></h4>
+                    <p>June 2014 - February 2015   <span>|</span>   Country</p>
                     <ul>
                         <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</li>
                         <li>Quis ipsum suspendisse ultrices gravida.</li>
@@ -78,11 +78,11 @@
             </div>
             <!--Education-->
             <div>
-                <h3>Education</h3>
-                <div>
+                <h3 class="title">Education</h3>
+                <div class="education">
                     <h4>Ivan Franko National University of Lviv</h4>
                     <h5>Computer Science</h5>
-                    <p>September 2019 - up to now   |   Ukraine</p>
+                    <p>September 2019 - up to now   <span>|</span>   Ukraine</p>
                 </div>
             </div>
         </div>
