change ims to _

--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
                 <h3 class="title">Projets</h3>
                 <ol>
                     <li>
-                        <a href="https://github.com/Yurii-Vipshovsky/SS_Progect_Front/tree/master">https://github.com/Yurii-Vipshovsky/SS_Progect_Front/tree/master</a>
-                        <img id="img1" src="img/vector.svg" alt=""/>
+                        <a class="dotted" href="https://github.com/Yurii-Vipshovsky/SS_Progect_Front/tree/master">https://github.com/Yurii-Vipshovsky/SS_Progect_Front/tree/master</a>
+                        _ _ _
                         [<span class="tech-name"> React </span>]
                     </li>
                     <li>
                         <a href="https://github.com/Yurii-Vipshovsky/Web_app">https://github.com/Yurii-Vipshovsky/Web_app</a>
-                        <img id="img2" src="img/vector.svg" alt=""/>
+                        _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
                         [<span class="tech-name"> ASP.net </span>]
                     </li>
                     <li>
                         <a href="https://github.com/XashDM/sport-hub">https://github.com/XashDM/sport-hub</a>
-                        <img id="img3" src="img/vector.svg" alt=""/>
+                        _ _ _ _
                         [<span class="tech-name"> HTML5, CSS3, JavaScript, ASP.net </span>]
                     </li>
                 </ol>
