update for actual info

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="main-content">
             <!--About User-->
             <div class="about">
-                <h2>Front-End Developer</h2>
+                <h2>Front-End / Full-stack ASP.net Developer</h2>
                 <h1>Yuri Vipshovsky</h1>
                 <p>Programmer on severel langages without work experiense, but with great desire to work in IT</p>
             </div>
@@ -55,26 +55,6 @@
                         <li>Goods accounting</li>
                     </ul>
                 </div>
-                <!--Company 2-->
-                <div class="work">
-                    <h4>Manager <span>Roga & Kopyta New</span></h4>
-                    <p>March 2015 - October 2018   <span>|</span>   Country</p>
-                    <ul>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</li>
-                        <li>Quis ipsum suspendisse ultrices gravida.</li>
-                        <li>Risus commodo viverra maecenas. </li>
-                    </ul>
-                </div>
-                <!--Company 3-->
-                <div class="work">
-                    <h4>Manager <span>Roga & Kopyta LLC</span></h4>
-                    <p>June 2014 - February 2015   <span>|</span>   Country</p>
-                    <ul>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</li>
-                        <li>Quis ipsum suspendisse ultrices gravida.</li>
-                        <li>Risus commodo viverra maecenas. </li>
-                    </ul>
-                </div>
             </div>
             <!--Education-->
             <div>
@@ -95,6 +75,7 @@
                 <div>
                     <p><span class="contact-type">C:</span> <a class="contact-link" href="tel:+380958962778">+380 95 896 2778</a></p>
                     <p><span class="contact-type">E:</span> <a class="contact-link" href="mailto:jura12156@gmail.com">jura12156@gmail.com</a></p>
+		    <p><span class="contact-type">Git:</span> <a class="contact-link" href="https://github.com/Yurii-Vipshovsky">https://github.com/Yurii-Vipshovsky</a></p>
                 </div>
             </div>
             <!--Tech Skils-->
