Changed to Last version

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
         <div class="main-content">
             <!--About User-->
             <div class="about">
-                <h2>Front-End / Full-stack ASP.net Developer</h2>
+                <h2>Salesforce Internship</h2>
                 <h1>Yuri Vipshovsky</h1>
-                <p>Programmer on severel langages without work experiense, but with great desire to work in IT</p>
+                <p>I am studying at university for a Bachelor's in Computer Science on third course.<br>
+                    Have 2 years of experience in different programming languages.<br>
+                    Ended several programing courses.<br>
+                    Strong mathematical knowledge.
+                </p>
             </div>
             <!--Progects-->
             <div class="progects">
@@ -26,36 +30,73 @@
                 <ol>
                     <li>
                         <a class="dotted" href="https://github.com/Yurii-Vipshovsky/SS_Progect_Front/tree/master">https://github.com/Yurii-Vipshovsky/SS_Progect_Front/tree/master</a>
-                        _ _ _
+                        _ _ _ _ _ _ _ _
                         [<span class="tech-name"> React </span>]
                     </li>
                     <li>
                         <a href="https://github.com/Yurii-Vipshovsky/Web_app">https://github.com/Yurii-Vipshovsky/Web_app</a>
-                        _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
+                        _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
                         [<span class="tech-name"> ASP.net </span>]
                     </li>
                     <li>
                         <a href="https://github.com/XashDM/sport-hub">https://github.com/XashDM/sport-hub</a>
-                        _ _ _ _
+                        _ _ _ _ _ _ _ _ _
                         [<span class="tech-name"> HTML5, CSS3, JavaScript, ASP.net </span>]
+                    </li>
+                    <li>
+                        <a href="https://github.com/Yurii-Vipshovsky/Convolution_Neiron_NET">https://github.com/Yurii-Vipshovsky/Convolution_Neiron_NET</a>
+                        _ _ _
+                        [<span class="tech-name"> Python, TensorFlow </span>]
+                    </li>
+                    <li>
+                        <a href="https://github.com/YuriiSmolii/Linguist">https://github.com/YuriiSmolii/Linguist</a>
+                        _ _ _ _ _ 
+                        [<span class="tech-name"> HTML5, CSS3, JavaScript, ASP.net, WPF </span>]
                     </li>
                 </ol>
             </div>
             <!--Work-->
             <div>
-                <h3 class="title">Work Experience</h3>
+                <h3 class="title">Experience / IT
+                    related educational
+                    practice
+                    </h3>
                 <!--Company 1-->
                 <div class="work">
-                    <h4>Accounter <span>"Культпроект"</span></h4>
-                    <p>June 2018 - up to now <span>|</span> Ukraine</p>
+                    <h4>Full-stack Developer <span>Sport-hub</span></h4>
+                    <p>3 mounth <span>|</span> Course project with SoftServe</p>
+                    Web application focused exclusively on the sports activities will allow users to effectively
+                    manage the news they want to see thus helping fans and people interested in sports
+                    to address the issue of information overdose on the web and save time when looking
+                    for the news consistent with their interests.
                     <ul>
-                        <li>Bills payment</li>
-                        <li>Creation of tax reports</li>
-                        <li>Salary accrual</li>
-                        <li>Goods accounting</li>
+                        <li>Design coding</li>
+                        <li>Users profile development</li>
+                        <li>Site Navigation</li>
+                    </ul>
+                </div>
+                <!--Company 2-->
+                <div class="work">
+                    <h4>Full-stack Developer <span>Linguist</span></h4>
+                    <p>8 mounth <span>|</span> University Progect</p>
+                    Windows application for learning foreing languages in flip-cards format and translation words format.
+                    <ul>
+                        <li>Creating functionality</li>
+                        <li>Base app logic development</li>
+                        <li>Fixing bags</li>
+                        <li>Working with DB</li>
+                    </ul>
+                    Web aplication for learning foreing languages same as with desctop.
+                    <ul>
+                        <li>User login and registration</li>
+                        <li>Email authentication</li>
+                        <li>Fixing bags</li>
+                        <li>Cretion learning logick</li>
+                        <li>Coding design</li>
                     </ul>
                 </div>
             </div>
+            
             <!--Education-->
             <div>
                 <h3 class="title">Education</h3>
@@ -68,7 +109,7 @@
         </div>
         <!--Side Bar-->
         <aside>
-            <img src="img/photo_2022-01-28_19-39-54.jpg" alt="My Photo" class="myPhoto"/>
+            <img src="img/photo_2022-06-03_15-21-45.jpg" alt="My Photo" class="myPhoto"/>
             <!--Contacts-->
             <div class="userInfo contacts">
                 <h3>Contacts</h3>
@@ -82,10 +123,12 @@
             <div class="userInfo">
                 <h3>Tech Skils</h3>
                 <ul>
-                    <li><span>HTML5</span></li>
-                    <li><span>CSS3</span></li>
+                    <li><span>HTML5 CSS3 Ajax</span></li>
+                    <li><span>PostgreSQL MSSQL</span></li>
                     <li><span>GIT</span></li>
+                    <li><span>Web API</span></li>
                     <li><span>ASP.net</span></li>
+                    <li><span>Entity Framework</span></li>
                     <li><span>Python</span></li>
                 </ul>
             </div>
