--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
         </div>
         <!--Side Bar-->
         <aside>
-            <img src="img/photo_2022-06-03_15-21-45.jpg" alt="My Photo" class="myPhoto"/>
+            <!--Git Version-->
+            <img src="img/photo_2022-01-28_19-39-54.jpg" alt="My Photo" class="myPhoto"/>
+            <!--Personal Version-->
+            <!--<img src="img/photo_2022-06-03_15-21-45.jpg" alt="My Photo" class="myPhoto"/>-->
             <!--Contacts-->
             <div class="userInfo contacts">
                 <h3>Contacts</h3>
