--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
         <div class="main-content">
             <!--About User-->
             <div class="about">
-                <h2>Salesforce Internship</h2>
+                <h2>Front-end Developer</h2>
                 <h1>Yuri Vipshovsky</h1>
-                <p>I am studying at university for a Bachelor's in Computer Science on third course.<br>
-                    Have 2 years of experience in different programming languages.<br>
+                <p>I've been working as React developer for 1 year<br>
+                    Have 3 years of experience in different programming languages.<br>
                     Ended several programing courses.<br>
-                    Strong mathematical knowledge.
+                    I am ended Bachelor in Computer Science at university this year and going to a master's degree.<br>
+                    I love to find productive and simple solution and code them.
                 </p>
             </div>
             <!--Progects-->
@@ -29,29 +30,14 @@
                 <h3 class="title">Projets</h3>
                 <ol>
                     <li>
-                        <a class="dotted" href="https://github.com/Yurii-Vipshovsky/SS_Progect_Front/tree/master">https://github.com/Yurii-Vipshovsky/SS_Progect_Front/tree/master</a>
+                        <a class="dotted" href="https://github.com/Yurii-Vipshovsky/JsCamp5">https://github.com/Yurii-Vipshovsky/JsCamp5</a>
                         _ _ _ _ _ _ _ _
-                        [<span class="tech-name"> React </span>]
-                    </li>
-                    <li>
-                        <a href="https://github.com/Yurii-Vipshovsky/Web_app">https://github.com/Yurii-Vipshovsky/Web_app</a>
-                        _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
-                        [<span class="tech-name"> ASP.net </span>]
-                    </li>
-                    <li>
-                        <a href="https://github.com/XashDM/sport-hub">https://github.com/XashDM/sport-hub</a>
-                        _ _ _ _ _ _ _ _ _
-                        [<span class="tech-name"> HTML5, CSS3, JavaScript, ASP.net </span>]
-                    </li>
-                    <li>
-                        <a href="https://github.com/Yurii-Vipshovsky/Convolution_Neiron_NET">https://github.com/Yurii-Vipshovsky/Convolution_Neiron_NET</a>
-                        _ _ _
-                        [<span class="tech-name"> Python, TensorFlow </span>]
+                        [<span class="tech-name"> React, Node.js </span>]
                     </li>
                     <li>
                         <a href="https://github.com/YuriiSmolii/Linguist">https://github.com/YuriiSmolii/Linguist</a>
                         _ _ _ _ _ 
-                        [<span class="tech-name"> HTML5, CSS3, JavaScript, ASP.net, WPF </span>]
+                        [<span class="tech-name"> HTML, CSS, JavaScript, ASP.net, WPF </span>]
                     </li>
                 </ol>
             </div>
@@ -60,19 +46,27 @@
                 <h3 class="title">Experience / IT
                     related educational
                     practice
-                    </h3>
+                </h3>
+                <!--Courses 1-->
+                <div class="work">
+                    <h4>Front-end Developer courses</h4>
+                    <p>1 year <span>|</span> Sigma Software</p>
+                    Creation different web sites from web templates.
+                    <ul>
+                        <li>Creating single page aplication using React</li>                        
+                        <li>Creating different Web pages from templates using only HTML and CSS</li>
+                        <li>Creating different functionality using JavaScript and Node.js</li>
+                    </ul>
+                </div>
                 <!--Company 1-->
                 <div class="work">
-                    <h4>Full-stack Developer <span>Sport-hub</span></h4>
-                    <p>3 mounth <span>|</span> Course project with SoftServe</p>
-                    Web application focused exclusively on the sports activities will allow users to effectively
-                    manage the news they want to see thus helping fans and people interested in sports
-                    to address the issue of information overdose on the web and save time when looking
-                    for the news consistent with their interests.
+                    <h4>SalesForce Courses</h4>
+                    <p>3 month <span>|</span> Noltic <span></p>
+                    SalesForce full stack developer.
                     <ul>
-                        <li>Design coding</li>
-                        <li>Users profile development</li>
-                        <li>Site Navigation</li>
+                        <li>Working with Data Base - DML, SSQL</li>
+                        <li>Creating components using JavaScript - LWC</li>
+                        <li>Creating server logick - Apex</li>
                     </ul>
                 </div>
                 <!--Company 2-->
@@ -83,14 +77,12 @@
                     <ul>
                         <li>Creating functionality</li>
                         <li>Base app logic development</li>
-                        <li>Fixing bags</li>
                         <li>Working with DB</li>
                     </ul>
                     Web aplication for learning foreing languages same as with desctop.
                     <ul>
                         <li>User login and registration</li>
                         <li>Email authentication</li>
-                        <li>Fixing bags</li>
                         <li>Cretion learning logick</li>
                         <li>Coding design</li>
                     </ul>
@@ -103,48 +95,55 @@
                 <div class="education">
                     <h4>Ivan Franko National University of Lviv</h4>
                     <h5>Computer Science</h5>
-                    <p>September 2019 - up to now   <span>|</span>   Ukraine</p>
+                    <p>September 2019 - June 2023   <span>|</span>   Ukraine</p>
+                </div>
+                <div class="education">
+                    <h4>Lviv Polytechnic National University</h4>
+                    <h5>Software Engineering</h5>
+                    <p>September 2023 - Now   <span>|</span>   Ukraine</p>
                 </div>
             </div>
         </div>
         <!--Side Bar-->
         <aside>
             <!--Git Version-->
-            <img src="img/photo_2022-01-28_19-39-54.jpg" alt="My Photo" class="myPhoto"/>
+            <img src="img/1.jpg" alt="My Photo" class="myPhoto"/>
             <!--Personal Version-->
             <!--<img src="img/photo_2022-06-03_15-21-45.jpg" alt="My Photo" class="myPhoto"/>-->
             <!--Contacts-->
             <div class="userInfo contacts">
                 <h3>Contacts</h3>
                 <div>
-                    <p><span class="contact-type">C:</span> <a class="contact-link" href="tel:+380958962778">+380 95 896 2778</a></p>
-                    <p><span class="contact-type">E:</span> <a class="contact-link" href="mailto:jura12156@gmail.com">jura12156@gmail.com</a></p>
-		    <p><span class="contact-type">Git:</span> <a class="contact-link" href="https://github.com/Yurii-Vipshovsky">https://github.com/Yurii-Vipshovsky</a></p>
+                    <p><span class="contact-type">C:</span> <a class="contact-link" href="tel:+380677553268">+380 67 755 3268</a></p>
+                    <p><span class="contact-type">E:</span> <a class="contact-link" href="mailto:vip.cool.ua@gmail.com">vip.cool.ua@gmail.com</a></p>
+		            <p><span class="contact-type">Git:</span> <a class="contact-link" href="https://github.com/Yurii-Vipshovsky">https://github.com/Yurii-Vipshovsky</a></p>
                 </div>
             </div>
             <!--Tech Skils-->
             <div class="userInfo">
                 <h3>Tech Skils</h3>
                 <ul>
-                    <li><span>HTML5 CSS3 Ajax</span></li>
-                    <li><span>PostgreSQL MSSQL</span></li>
-                    <li><span>GIT</span></li>
-                    <li><span>Web API</span></li>
-                    <li><span>ASP.net</span></li>
-                    <li><span>Entity Framework</span></li>
-                    <li><span>Python</span></li>
+                    <li><span>React</span></li>
+                    <li><span>Node.js</span></li>
+                    <li><span>HTML5 CSS3 JavaScript</span></li>                 
+                    <li><span>REST API</span></li>
+                    <li><span>SQL</span></li>
                 </ul>
             </div>
             <!--Soft Skils-->
             <div class="userInfo">
                 <h3>Soft Skils</h3>
                 <ul>
-                    <li><span>Scrum</span></li>
-                    <li><span>Agile</span></li>
                     <li><span>Teamwork</span></li>
                     <li><span>Communication</span></li>
-                    <li><span>Problem solving</span></li>
                     <li><span>Time management</span></li>
+                </ul>
+            </div>
+            <div class="userInfo">
+                <h3>Languages</h3>
+                <ul>
+                    <li><span>English - B2</span></li>
+                    <li><span>Ukrainian - Native</span></li>
                 </ul>
             </div>
         </aside>
